cart card table mode on mobile fixing + tooltip description

--- a/src/styles/blocks/cart/table-header.sass
+++ b/src/styles/blocks/cart/table-header.sass
@@ -5,7 +5,7 @@
     background-color: $pre-white
     transition: .25s
     &__code
-        width: 7.5%
+        min-width: 7.5%
         margin-right: 2.5rem
     &__dscr
         width: 20.83%
